# paper_summarization_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
scitldr_streamlit/: main.py
tests/: test_scitldr_streamlit.py
