[tool.poetry]
name = "scitldr_streamlit"
version = "0.1.0"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
transformers = "^4.17.0"
streamlit = "^1.8.1"
schnitsum = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.2.0"
black = "^22.3.0"
isort = "^5.10.1"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
